argocd/applications/observability/ingressroute-grafana-k8s-private.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: observability-grafana-private
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.k8s.proompteng.ai`)
      services:
        - name: observability-grafana
          port: 80
  tls:
    secretName: wildcard-k8s-proompteng-ai-tls
